--- a/services/swan.html
+++ b/services/swan.html
@@ -137,7 +137,7 @@
 </nav>
 
 <nav class="jump-nav" aria-label="Jump to">
-  <a href="/services/swan.html#setup">Setup</a> • <a href="/services/swan.html#fees">Fees</a> • <a href="/services/swan.html#payment-methods">Methods</a> • <a href="/services/swan.html#compat">Features</a> • <a href="/services/swan.html#self-custody">Self-custody</a> • <a href="/services/swan.html#privacy-safety">Privacy</a> • <a href="/services/swan.html#trust">Trust</a> • <a href="/services/swan.html#faq-heading">FAQs</a>
+  <a href="/services/swan.html#setup">Setup</a> • <a href="/services/swan.html#fees">Fees</a> • <a href="/services/swan.html#payment-methods">Methods</a> • <a href="/services/swan.html#compat">Compatibility</a> • <a href="/services/swan.html#self-custody">Self-custody</a> • <a href="/services/swan.html#privacy-safety">Privacy</a> • <a href="/services/swan.html#trust">Trust</a> • <a href="/services/swan.html#faq-heading">FAQs</a>
 </nav>
   <!-- BUILD:START -->
 <div class="service-sticky-cta">
