--- a/services/fold.html
+++ b/services/fold.html
@@ -137,7 +137,7 @@
 </nav>
 
 <nav class="jump-nav" aria-label="Jump to">
-  <a href="/services/fold.html#setup">Setup</a> • <a href="/services/fold.html#fees">Fees</a> • <a href="/services/fold.html#compat">Features</a> • <a href="/services/fold.html#migration">Migration</a> • <a href="/services/fold.html#privacy-safety">Privacy</a> • <a href="/services/fold.html#trust">Trust</a> • <a href="/services/fold.html#faq-heading">FAQs</a>
+  <a href="/services/fold.html#setup">Setup</a> • <a href="/services/fold.html#fees">Fees</a> • <a href="/services/fold.html#compat">Compatibility</a> • <a href="/services/fold.html#migration">Migration</a> • <a href="/services/fold.html#privacy-safety">Privacy</a> • <a href="/services/fold.html#trust">Trust</a> • <a href="/services/fold.html#faq-heading">FAQs</a>
 </nav>
   <!-- BUILD:START -->
 <div class="service-sticky-cta">
