--- a/services/fold.html
+++ b/services/fold.html
@@ -430,8 +430,8 @@
 <details class="section-accordion">
   <summary>Privacy & Safety</summary>
 
-<section id="privacy-safety" class="service-section" aria-labelledby="privacy-safety-label">
-  <h2 id="privacy-safety-label" class="feature-label">Privacy & Safety</h2>
+<section id="privacy" class="service-section" aria-labelledby="privacy-label">
+  <h2 id="privacy-label" class="feature-label">Privacy & Safety</h2>
   <div class="privacy-cards">
     <div class="privacy-card" id="data-flows">
       <h3>Who can see what when you use Fold</h3>
@@ -445,7 +445,7 @@
     </div>
     <div class="privacy-card" id="availability">
       <h3>Availability &amp; safe installs</h3>
-      <ul><li>The Fold Prepaid Debit Card currently serves U.S. residents only.</li><li><a href="#qualified-spend" class="glossary-link" data-term="Qualified spend">Qualified spend</a> and ACH reward calculations use UTC windows, so late-night transactions near month end may land in the next cycle.</li><li>You must maintain Fold+ membership for the entire month to earn ACH rewards; lapses reset eligibility until the following month.</li></ul>
+      <ul><li>The Fold Prepaid Debit Card currently serves U.S. residents only.</li><li><a href="/services/fold.html#qualified-spend" class="glossary-link" data-term="Qualified spend">Qualified spend</a> and ACH reward calculations use UTC windows, so late-night transactions near month end may land in the next cycle.</li><li>You must maintain Fold+ membership for the entire month to earn ACH rewards; lapses reset eligibility until the following month.</li></ul>
     </div>
   </div>
     <div class="micro-faqs">
@@ -874,6 +874,63 @@
   
   // Run when hash changes (clicking jump links, back/forward)
   window.addEventListener('hashchange', openAccordionForHash);
+})();
+</script>
+<!-- Open glossary when clicking glossary links -->
+<script>
+(function() {
+  function openGlossaryForHash(hash) {
+    // Use provided hash or get from URL
+    const targetHash = hash || window.location.hash;
+    if (!targetHash) return;
+    
+    try {
+      // Check if hash target is inside a collapsed mini-glossary
+      const target = document.querySelector(targetHash);
+      if (!target) return;
+      
+      const glossary = target.closest('.mini-glossary');
+      if (glossary && !glossary.open) {
+        glossary.open = true;
+        // Small delay to let details open before scrolling
+        setTimeout(() => {
+          target.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
+        }, 100);
+      } else if (target) {
+        // Glossary already open, just scroll
+        target.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
+      }
+    } catch (e) {
+      // Invalid selector, ignore
+    }
+  }
+  
+  // Run on page load
+  if (document.readyState === 'loading') {
+    document.addEventListener('DOMContentLoaded', function() { openGlossaryForHash(); });
+  } else {
+    openGlossaryForHash();
+  }
+  
+  // Run when hash changes
+  window.addEventListener('hashchange', function() { openGlossaryForHash(); });
+  
+  // Intercept clicks on glossary links
+  document.addEventListener('click', function(e) {
+    const link = e.target.closest('a.glossary-link');
+    if (link) {
+      e.preventDefault();
+      // Extract hash from href
+      const href = link.getAttribute('href');
+      const hash = href ? href.split('#')[1] : null;
+      if (hash) {
+        // Update URL hash
+        window.location.hash = hash;
+        // Open glossary immediately
+        openGlossaryForHash('#' + hash);
+      }
+    }
+  });
 })();
 </script>
 </body>
