--- a/services/pocket.html
+++ b/services/pocket.html
@@ -43,7 +43,7 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/pocket.html#webpage","name":"Pocket Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin","url":"https://buoybitcoin.com/services/pocket.html","inLanguage":"en","description":"Pocket review 2025: P2P for Buy Bitcoin. Non-custodial. Compare fees, features & setup guide.","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/pocket.html#service"},"dateModified":"2025-11-14"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/pocket.html#service","name":"Pocket","url":"https://pocketbitcoin.com","mainEntityOfPage":"https://buoybitcoin.com/services/pocket.html#webpage","description":"Pocket Bitcoin stands out with its non-custodial model, sending Bitcoin directly to your wallet without holding funds, and a no-account, KYC-light approach for daily buys up to €1,000 | 0.01 BTC | 0.…","image":"https://buoybitcoin.com/images/pocket.svg","serviceType":"Buy Bitcoin","areaServed":[{"@type":"Country","identifier":"EU"}],"offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Pocket","url":"https://pocketbitcoin.com"},"datePublished":"2020-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/pocket.html#webpage","name":"Pocket Review 2025: Fees, Features & Setup Guide | Buoy Bitcoin","url":"https://buoybitcoin.com/services/pocket.html","inLanguage":"en","description":"Pocket review 2025: P2P for Buy Bitcoin. Non-custodial. Compare fees, features & setup guide.","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/pocket.html#service"},"dateModified":"2025-11-16"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/pocket.html#service","name":"Pocket","url":"https://pocketbitcoin.com","mainEntityOfPage":"https://buoybitcoin.com/services/pocket.html#webpage","description":"Pocket Bitcoin stands out with its non-custodial model, sending Bitcoin directly to your wallet without holding funds, and a no-account, KYC-light approach for daily buys up to €1,000 | 0.01 BTC | 0.…","image":"https://buoybitcoin.com/images/pocket.svg","serviceType":"Buy Bitcoin","areaServed":[{"@type":"Country","identifier":"EU"}],"offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},"provider":{"@type":"Organization","name":"Pocket","url":"https://pocketbitcoin.com"},"datePublished":"2020-01-01"}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Buy Bitcoin","item":"https://buoybitcoin.com/buy-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Pocket","item":"https://buoybitcoin.com/services/pocket.html"}]}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"HowTo","name":"Getting started with Pocket","description":"Step-by-step guide to set up and start using Pocket.","url":"https://buoybitcoin.com/services/pocket.html#setup","step":[{"@type":"HowToStep","position":1,"name":"1. Create your Pocket order","text":"Visit pocketbitcoin.com and start a new one-off or auto-invest order. Paste a fresh receive address from your wallet or upload the file Pocket requests to validate it. Review the summary showing the 1.5% service fee and Kraken reference rate.","description":"Time: ~5 min"},{"@type":"HowToStep","position":2,"name":"2. Send your bank transfer","text":"Log into your bank and send a SEPA transfer to Pocket's IBAN with the exact payment message shown. Set the transfer as a standing order if you plan to auto-invest on a cadence. Save the confirmation email so you can trace the payment if the bank asks for details.","description":"Time: ~2 min"},{"@type":"HowToStep","position":3,"name":"3. Watch the payout in your wallet","text":"Wait for Pocket's execution email that confirms your order ran on Kraken. Open your wallet or a block explorer to see the incoming transaction Pocket broadcast. Label the transaction so you can reconcile it with your bank transfer later.","description":"Time: ~10–60 min"}],"estimatedCost":{"@type":"MonetaryAmount","currency":"USD","value":"0"}}</script></head>
 <body>
   <div class="container">
@@ -125,7 +125,7 @@
  <main>
   <div class="category-header category-header--vs">
    <h1 id="page-title">Pocket<span class="visually-hidden"> Review: Fees, Features & Setup Guide</span></h1>
-<div class="page-updated" data-updated="2025-11-14">Updated: November 2025</div>
+<div class="page-updated" data-updated="2025-11-16">Updated: November 2025</div>
   </div>
 <div class="breadcrumb-back"><a href="/buy-bitcoin.html">< Back to Buy Bitcoin</a></div>
 <nav class="breadcrumbs" aria-label="Breadcrumb">
@@ -515,8 +515,8 @@
 <details class="section-accordion">
   <summary>Privacy & Safety</summary>
 
-<section id="privacy-safety" class="service-section" aria-labelledby="privacy-safety-label">
-  <h2 id="privacy-safety-label" class="feature-label">Privacy & Safety</h2>
+<section id="privacy" class="service-section" aria-labelledby="privacy-label">
+  <h2 id="privacy-label" class="feature-label">Privacy & Safety</h2>
   <div class="privacy-cards">
     <div class="privacy-card" id="data-flows">
       <h3>Who can see what when you use Pocket</h3>
@@ -960,6 +960,63 @@
   
   // Run when hash changes (clicking jump links, back/forward)
   window.addEventListener('hashchange', openAccordionForHash);
+})();
+</script>
+<!-- Open glossary when clicking glossary links -->
+<script>
+(function() {
+  function openGlossaryForHash(hash) {
+    // Use provided hash or get from URL
+    const targetHash = hash || window.location.hash;
+    if (!targetHash) return;
+    
+    try {
+      // Check if hash target is inside a collapsed mini-glossary
+      const target = document.querySelector(targetHash);
+      if (!target) return;
+      
+      const glossary = target.closest('.mini-glossary');
+      if (glossary && !glossary.open) {
+        glossary.open = true;
+        // Small delay to let details open before scrolling
+        setTimeout(() => {
+          target.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
+        }, 100);
+      } else if (target) {
+        // Glossary already open, just scroll
+        target.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
+      }
+    } catch (e) {
+      // Invalid selector, ignore
+    }
+  }
+  
+  // Run on page load
+  if (document.readyState === 'loading') {
+    document.addEventListener('DOMContentLoaded', function() { openGlossaryForHash(); });
+  } else {
+    openGlossaryForHash();
+  }
+  
+  // Run when hash changes
+  window.addEventListener('hashchange', function() { openGlossaryForHash(); });
+  
+  // Intercept clicks on glossary links
+  document.addEventListener('click', function(e) {
+    const link = e.target.closest('a.glossary-link');
+    if (link) {
+      e.preventDefault();
+      // Extract hash from href
+      const href = link.getAttribute('href');
+      const hash = href ? href.split('#')[1] : null;
+      if (hash) {
+        // Update URL hash
+        window.location.hash = hash;
+        // Open glossary immediately
+        openGlossaryForHash('#' + hash);
+      }
+    }
+  });
 })();
 </script>
 </body>
