OpenNode and Lightspark populated

--- a/services/btc-pay.html
+++ b/services/btc-pay.html
@@ -351,7 +351,7 @@
   <summary>Hardware BOM</summary>
 
 <section id="hardware" class="service-section">
-  <h2 class="feature-label">Deployment Options.</h2>
+  <h2 class="feature-label">Deployment Options</h2>
   <div class="hardware-intro">BTC Pay runs on the hardware you provide. That means you can choose a low-cost cloud server for convenience or a physical device at home for maximum privacy.</div>
   <div class="hardware-cards">
     
