--- a/index.html
+++ b/index.html
@@ -335,6 +335,14 @@
     <div id="newsletter-message" style="display:none;"></div>
     <div id="newsletter-sending" style="display:none;">Sending...</div>
   </div>
+  
+  <div class="footer-personal-note">
+    <img src="images/jasper-van-de-ree.webp" alt="Jasper van de Ree" class="footer-profile-img">
+    <p>
+      Hey 👋 I’m <a href="https://www.jaspervanderee.com/" target="_blank">Jasper</a>, the creator of Buoy. Follow my journey building open-source Bitcoin tools on <a href="https://snort.social/p/npub165w944kqt29hrt90l2ssc0rvmhf0u77dgezskknfnczr7r030v0s2g6kae" target="_blank">Nostr</a>.
+    </p>
+  </div>
+
   <div class="footer-container">
     <div class="footer-column">
       <h3>Social</h3>
